--- a/roles/service-docker/tasks/main.yml
+++ b/roles/service-docker/tasks/main.yml
@@ -50,7 +50,7 @@
 - name: install docker-compose
   become: yes
   get_url:
-    url: "https://github.com/docker/compose/releases/download/1.28.2/docker-compose-{{ ansible_system }}-{{ ansible_architecture }}"
+    url: "{{ docker_compose_url }}"
     dest: /usr/local/bin/docker-compose
     mode: +x
 
