--- a/roles/auth-ssh-key/tasks/main.yml
+++ b/roles/auth-ssh-key/tasks/main.yml
@@ -1,6 +1,7 @@
 ---
 - name: create authorized_key
   authorized_key:
-    user: "{{ authorized_key_user }}"
-    key: "{{ lookup('file', '~/.ssh/id_rsa.pub') }}"
+    user: "{{ ssh_authorized_key_user }}"
+    #key: "{{ lookup('file', '~/.ssh/id_rsa.pub') }}"
+    key: "{{ lookup('file', ssh_public_key_path) }}"
     state: present
