--- a/roles/dev-git224/tasks/main.yml
+++ b/roles/dev-git224/tasks/main.yml
@@ -1,4 +1,17 @@
 ---
+- name: get yum installed
+  yum:
+    list: installed
+  register: yum_installed
+
+- name: uninstal @base git
+  become: true
+  yum:
+    name:
+      - "git*"
+    state: absent
+  when: "yum_installed.results | map(attribute='name') | unique | select('match', '^git$')"
+
 - name: install ius-release
   become: yes
   yum:
