--- a/roles/dev-nodenv/tasks/main.yml
+++ b/roles/dev-nodenv/tasks/main.yml
@@ -47,17 +47,17 @@
 - name: check installed node version
   stat:
     path: "{{ nodenv_root }}/versions/{{ nodejs_version }}"
-  register: node
+  register: node_exec
 
 - name: node installed status
   debug:
-    msg: "{{ node.stat.exists }}"
+    msg: "{{ node_exec.stat.exists }}"
 
 - name: nodenv update
   shell: |
       source ~/.bash.d/30-nodenv.sh
       nodenv update
-  when: not node.stat.exists
+  when: not node_exec.stat.exists
 
 - name: install nodejs
   shell: |
@@ -65,4 +65,4 @@
     nodenv install {{ nodejs_version }}
     nodenv global {{ nodejs_version }}
     nodenv rehash
-  when: not node.stat.exists
+  when: not node_exec.stat.exists
