--- a/roles/dev-sqlite3/vars/main.yml
+++ b/roles/dev-sqlite3/vars/main.yml
@@ -1,3 +1,10 @@
 ---
-sqlite3_path: /usr/local/bin/sqlite3
-sqlite3_build_dir: sqlite3
+data_dir: "~/.ansible/.data/{{ role_name }}"
+
+sqlite3_src_file_name: "sqlite-autoconf.tar.gz"
+sqlite3_checksum_file: "{{ data_dir }}/{{ sqlite3_src_file_name }}.checksum"
+sqlite3_src_url_file: "{{ data_dir }}/{{ sqlite3_src_file_name }}.url"
+
+sqlite3_build_dir_prefix: "sqlite3-build."
+
+sqlite3_exec_path: /usr/local/bin/sqlite3
