--- a/roles/module-develop/tasks/main.yml
+++ b/roles/module-develop/tasks/main.yml
@@ -14,8 +14,7 @@
       - xz-devel
 
 - name: install git224
-  include_tasks:
-    file: git224.yml
+  include_tasks: git224.yml
 
 - name: add /usr/local/lib to ld.so.conf.d
   become: yes
