--- a/roles/dev-sqlite3/vars/main.yml
+++ b/roles/dev-sqlite3/vars/main.yml
@@ -7,4 +7,4 @@ sqlite3_url_file: "{{ data_dir }}/{{ sqlite3_src_file_name }}.url"
 
 sqlite3_build_dir_prefix: "sqlite3-build."
 
-sqlite3_exec_path: /usr/local/bin/sqlite3
+sqlite3_path: /usr/local/bin/sqlite3
