--- a/roles/dev-sqlite3/tasks/main.yml
+++ b/roles/dev-sqlite3/tasks/main.yml
@@ -22,7 +22,12 @@
 
 - name: check build require
   set_fact:
-    _build_require: "{{ (not _sqlite3.stat.exists) or (_src_url.content is not defined) or ((_src_url.content | b64decode) != sqlite3_src_url) }}"
+    _build_require:
+      "{{
+        (not _sqlite3.stat.exists) or
+        (_src_url.content is not defined) or
+        ((_src_url.content | b64decode) != sqlite3_src_url)
+      }}"
   changed_when: _build_require
 
 - name: create build directory
