--- a/roles/user-env/tasks/main.yml
+++ b/roles/user-env/tasks/main.yml
@@ -71,6 +71,8 @@
     block: |
       colorscheme koehler
       set noautoindent
+      set nopaste
+      autocmd Filetype * set formatoptions-=ro
     create: yes
     marker: '" {mark} ANSIBLE MANAGED BLOCK'
     mode: 0600
