--- a/roles/auth-ssh-key/tasks/main.yml
+++ b/roles/auth-ssh-key/tasks/main.yml
@@ -1,5 +1,6 @@
 ---
 - name: create authorized_key
+  become: yes
   authorized_key:
     user: "{{ ssh_authorized_key_user }}"
     key: "{{ lookup('file', ssh_public_key_path) }}"
