--- a/roles/auth-ssh-secure/tasks/main.yml
+++ b/roles/auth-ssh-secure/tasks/main.yml
@@ -1,23 +1,27 @@
 ---
 - name: disable root login
+  become: yes
   lineinfile:
     path: /etc/ssh/sshd_config
     regexp: "^PermitRootLogin"
     line: "PermitRootLogin no"
 
 - name: disable empty password
+  become: yes
   lineinfile:
     path: /etc/ssh/sshd_config
     regexp: "^PermitEmptyPasswords"
     line: "PermitEmptyPasswords no"
 
 - name: disable password auth
+  become: yes
   lineinfile:
     path: /etc/ssh/sshd_config
     regexp: "^PasswordAuthentication"
     line: "PasswordAuthentication no"
 
 - name: restart sshd
+  become: yes
   systemd:
     name: sshd
     state: restarted
