--- a/roles/module-develop/tasks/main.yml
+++ b/roles/module-develop/tasks/main.yml
@@ -1,18 +1,18 @@
 ---
-- name: yum
-  include_tasks: yum.yml
+- name: yum-install
+  include_tasks: yum-install.yml
 
 - name: git-centos7
   include_tasks: git-centos7-main.yml
   when:
-    - ansible_distribution == 'CentOS'
-    - ansible_pkg_mgr == 'yum'
+    - ansible_os_family == 'RedHat'
+    - ansible_distribution_major_version == '7'
 
 - name: git-centos8
   include_tasks: git-centos8-main.yml
   when:
-    - ansible_distribution == 'CentOS'
-    - ansible_pkg_mgr == 'dnf'
+    - ansible_os_family == 'RedHat'
+    - ansible_distribution_major_version == '8'
 
 - name: ldconfig
   include_tasks: ldconfig.yml
