--- a/roles/module-utils/tasks/main.yml
+++ b/roles/module-utils/tasks/main.yml
@@ -1,9 +1,14 @@
 ---
-- name: install epel
+- name: install epel GPG key
+  become: yes
+  rpm_key:
+    key: "https://dl.fedoraproject.org/pub/epel/RPM-GPG-KEY-EPEL-{{ ansible_distribution_major_version }}"
+
+- name: install epel-release
   become: yes
   yum:
     name:
-      - epel-release
+      - "https://dl.fedoraproject.org/pub/epel/epel-release-latest-{{ ansible_distribution_major_version }}.noarch.rpm"
 
 - name: install modules
   become: yes
