--- a/setup-system.yml
+++ b/setup-system.yml
@@ -2,6 +2,7 @@
 - hosts: all
   name: setup system
   roles:
+    - role: common
     - role: system-config
     - role: system-update
     - role: system-reboot
