--- a/setup-developer.yml
+++ b/setup-developer.yml
@@ -4,8 +4,9 @@
   roles:
     - role: common
     - role: user-env
-    - role: module-utils
-    - role: module-develop
+    - role: tools-utils
+    - role: tools-develop
+    - role: tools-system
     - role: dev-sqlite3
     - role: dev-nodenv
     - role: dev-pyenv
