--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -1,5 +1,9 @@
 ---
 - name: check os
+  set_fact:
+    _centos: "{{ (ansible_os_family == 'RedHat') and (ansible_distribution_major_version in ['7','8']) }}"
+
+- name:
   fail:
     msg: "not supported"
-  when: ansible_os_family != 'RedHat'
+  when: not _centos
